# renix

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  LICENSE  README.md  flake.nix
.github/workflows/: ci.yml  cleanup.yml  release.yml
src/: app.rs  main.rs
src/config/: hosts.rs  mod.rs
src/nix/: flake.rs  mod.rs  rebuild.rs
src/terminal/: mod.rs
src/ui/: layout.rs  main_panel.rs  mod.rs  settings.rs
