[package]
name = "renix"
version = "0.1.1"
edition = "2021"
authors = ["Sarah <sarah@lament.gay>"]
description = "NixOS Rebuild Manager TUI"
license = "MIT"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
color-eyre = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
tokio = { version = "1.0", features = ["full"] }
portable-pty = "0.8"
vte = "0.13"
nix = { version = "0.29", features = ["term"] }
